# flin-shopify-analytics-mcp

./: .env.example  .gitignore  README.md  package.json  pyproject.toml
.github/workflows/: publish-pypi.yml  release.yml
docs/plans/: 2026-04-11-shopify-analysis-skill-design.md  2026-04-11-shopify-analysis-skill.md  2026-04-11-v2-reporting-core-design.md  2026-04-11-v2-reporting-core.md  2026-04-11-v3-retention-crm-design.md  2026-04-11-v3-retention-crm.md  2026-04-11-v4-attribution-design.md  2026-04-11-v4-attribution.md
flin_shopify_analytics_mcp/: __init__.py  __main__.py  analytics.py  config.py  mcp_server.py  shopify_client.py  tools.py
py_tests/: test_analytics.py  test_config.py  test_mcp_server.py  test_shopify_client_auth.py  test_shopify_client_orders.py  test_stdio_protocol.py
skills/shopify-analysis-playbook/: SKILL.md
src/: analytics.js  config.js  index.js  mcp-server.js  shopify-client.js  tools.js
test/: analytics.test.js  config.test.js  mcp-server.test.js  shopify-client-auth.test.js
