[build-system]
requires = ["hatchling>=1.26.3"]
build-backend = "hatchling.build"

[project]
name = "flin-shopify-analytics-mcp"
version = "0.2.3"
description = "Read-only MCP server for Shopify analytics with client credentials or static token auth."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "flin agency" }
]
keywords = ["mcp", "shopify", "analytics", "model-context-protocol"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/flin-agency/flin-shopify-analytics-mcp"
Repository = "https://github.com/flin-agency/flin-shopify-analytics-mcp"
Issues = "https://github.com/flin-agency/flin-shopify-analytics-mcp/issues"

[project.scripts]
flin-shopify-analytics-mcp = "flin_shopify_analytics_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["flin_shopify_analytics_mcp"]
